# HomeworkDRF

./: .env  .env.sample  .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: settings.py  urls.py
course/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_initial.py
nginx/: Dockerfile
user/: models.py  views.py
users/: models.py  permissions.py  serializer.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments_stripe_session_id_payments_stripe_status.py
